--- a/templates/index.html
+++ b/templates/index.html
@@ -66,8 +66,9 @@
             <br>
             <div id="error"></div>
         </div>
-        <script>
-            $(function() {
+        <script src="/static/js/index.js"></script>
+        {# <script>
+            /*$(function() {
                 $("#loader").html("")
                 var active = false;
                 var interrupt = false;
@@ -146,7 +147,7 @@
                         active = true; 
                     }
                 })
-            })
-        </script>
+            })*/
+        </script> #}
     </body>
 </html>
