--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Python in the Web</title>
+        <title>Python in the browser</title>
         <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0" http-equiv="Cache-control" content="max-age=0">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -48,7 +48,7 @@
     </head>
     <body>
         <div class="container">
-            <h1 style="text-align: center; font-size: 55px;">Python in the web</h1>
+            <h1 style="text-align: center; font-size: 65px;">Python in the browser</h1>
             <br>
             <div id="editor"></div>
             <br>
