--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js"></script>
         <!-- CSS files-->
         <link rel="stylesheet" href="/static/css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="container">
@@ -18,7 +19,7 @@
             <div id="editor"></div>
             <br>
             <!-- Bootstrap button to run the program -->
-            <center><button class="btn btn-large btn-primary btn-block btn-lg" id="run">Run</button></center>
+            <center><button class="btn btn-large btn-primary btn-block btn-lg" id="run"><i class="fa fa-play"></i>&nbsp;&nbsp;Run</button></center>
             <br>
             <center id="loader">
                 <div class="spinner-border text-primary" role="status">
